--- a/jenkinsfile
+++ b/jenkinsfile
@@ -8,7 +8,7 @@ pipeline {
 
             steps {
                 sh '''
-                sh "sh run.sh"
+                sh 'sh run.sh'
                 '''
 
             }
